Assert in fromTonga/vm/runtime/defmeth/scenarios/Stress_noredefine/TestDescription.java

XMLWordPrintable

    • b07

      Test: fromTonga/vm/runtime/defmeth/scenarios/Stress_noredefine/TestDescription.java

      # Internal Error (/open/src/hotspot/share/runtime/sharedRuntime.cpp:1481), pid=23873, tid=23950
      # assert(!callee.is_null() && invoke.has_receiver()) failed: or we should not be here

            Assignee:
            Goetz Lindenmaier
            Reporter:
            Jesper Wilhelmsson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: